--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
-    <title>Flummox TODO</title>
+    <title>Pomonote</title>
   </head>
   <body>
     <div id="app"></div>
